1.23.0
---
- libmpg123 version 42
  This adds mpg123_framelength() and makes mpg123_position() truly obsolete.
- First incarnation of libout123, a basic library to get audio data written
  to audio devices (or files). This collects the output modules of mpg123
  and makes them available to the wider masses. Also, the buffer logic
  (contained in libout123) got a lot of reworking which might be noticable
  in the interaction with terminal control.
- Added mpg123 --no-infoframe.
- Detect terminal on input side and enable control keys automatically.
  There is --no-control now to disable terminal control anyway.
- Avoid spillover of status line that caused unwanted terminal scrolling.
  If the terminal width is smaller than the full status string, a cut is
  made to make it fit.
- Draw a progress bar on the terminal by inversing colors behind status
  line.
- Rework the format of the status line to be more compact and consistent.
- Clip decode tables for large amplification with fixed-point decoders.
  Without that, high-pitched distortion enters really quickly when
  trying to increase volume even if output samples would not be clipped,
  weren't it for fixed-point math.
- Warning messages also start with a line break now to better fit in with
  verbose playback.
- Reporting of clipped samples also includes a line break now.
- Default for --preload now is 0.2 instead of 1 (fill whole buffer before
  playback). The maximum is 0.5 . This is mandated by corrected buffer
  interaction in libout123.
- Improved interaction with buffer process in terminal control mode.
  Seeking is more transparent now, taking dropped samples from buffer into
  account to avoid unintended jumps. Direct seeks with number row do not
  pause playback anymore.
- Silently skip APE tags (thanks to Hans de Goede).
- Some reduction in bitrot on AIX (typos in output module, build with
  --disable-largefile --with-audio=aix, real test welcome).